# RecycleOps-AI-Assistant

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  view_chromadb.py
migrations/: env.py
scripts/: init-db.sql
src/: __init__.py  config.py  main.py
src/database/: __init__.py  connection.py  models.py  repositories.py  vector_store.py
src/learning/: __init__.py  analyzer.py  extractor.py  scheduler.py
src/rag/: __init__.py  chain.py  embeddings.py  generator.py  retriever.py
src/services/: __init__.py  conversation_service.py  expert_service.py  proactive_service.py  solution_service.py
src/slack/: __init__.py  bot.py  commands.py  events.py  middleware.py
src/utils/: __init__.py  error_parser.py  text_utils.py
tests/: __init__.py  conftest.py  test_commands.py  test_learning.py  test_rag.py
